<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:textColor="@color/text_main"
        android:padding="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textColor="@color/text_main"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />

    <LinearLayout
        android:id="@+id/I_T_E_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/text_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_separator"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:padding="0dp"
            android:layout_margin="0dp"
            />

        <TextView
            android:id="@+id/text_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_separator"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:padding="0dp"
            android:layout_margin="0dp"
            />

        <TextView
            android:id="@+id/text_Expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_dropdown_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/I_T_E_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category_dropdown_layout"
        android:hint="@string/account_hint"
        android:textColorHint="@color/text_secondary"
        app:boxStrokeColor="@color/calcu_stroke"
        app:hintTextColor="@color/text_secondary"
        app:boxCornerRadiusTopStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusBottomEnd="4dp">

        <AutoCompleteTextView
            android:id="@+id/account_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/text_main"
            android:entries="@array/account_choices"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_dropdown_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/I_T_E_selection"
        app:layout_constraintStart_toEndOf="@id/account_dropdown_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/category_hint"
        android:textColorHint="@color/text_secondary"
        app:boxStrokeColor="@color/calcu_stroke"
        app:hintTextColor="@color/text_secondary"
        app:boxCornerRadiusTopStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusBottomEnd="4dp">

        <AutoCompleteTextView
            android:id="@+id/category_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/text_main"
            android:entries="@array/category_choices"/>

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/notes_edittext"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_secondary"
        android:hint="@string/add_notes"
        android:gravity="top|start"
        android:background="@drawable/edittext_with_stroke"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/account_dropdown_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_with_stroke"
        android:gravity="center_vertical|end"
        android:padding="20dp"
        android:text="0"
        android:textColor="@color/text_main"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_edittext" />

    <LinearLayout
        android:id="@+id/date_time_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/date_picker_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select Date"
            android:gravity="center"
            android:textColor="@color/text_main"
            android:background="@drawable/edittext_with_stroke"
            android:padding="12dp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/time_picker_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select Time"
            android:gravity="center"
            android:textColor="@color/text_main"
            android:background="@drawable/edittext_with_stroke"
            android:padding="12dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/date_time_layout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/calculator_ac"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="7"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="4"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="1"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_00"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="00"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/calculator_back"
                android:textSize="15sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="8"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="5"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="2"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="/"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="9"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="6"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="3"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="."
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="*"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_subtract"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:text="+"
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:text="="
                android:textSize="24sp"
                android:textColor="@color/text_main"
                android:background="@drawable/edittext_with_stroke"
                android:layout_margin="2dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>